kubernetes/apps/default/homepage-old/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
